packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__overlay_permission_edit_diff.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
Start with a prompt or /help.







╭ permission ──────────────────────────────────────────────────────────────────╮
│ Allow `Edit`?                                                                │
│   1 - fn old();                                                              │
│   1 + fn new();                                                              │
│                                                                              │
│ 1. Yes                                                                       │
│ 2. Yes, don't ask again                                                      │
│ 3. No (esc)                                                                  │
│                                                                              │
│ enter confirm · 1-3 select · y allow · a always · esc/n deny · d diff        │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
