packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__overlay_shell_command_done.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
AgenticStudio 0.1.0 — /help for keys and commands



        ┌ command ─────────────────────────────────────────────────────┐
        │$ echo hello                                                  │
        │                                                              │
        │hello                                                         │
        │world                                                         │
        │                                                              │
        │↑/↓ scroll · Esc close                                        │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
────────└──────────────────────────────────────────────────────────────┘────────
┌ prompt ──────────────────────────────────────────────────────────────────────┐
│ Type a message, / for commands, @ for files                                  │
└──────────────────────────────────────────────────────────────────────────────┘
native · code · auto · anthropic/claude-sonnet-4-5 · idle · tokens in/out 0 / 0
