packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__overlay_theme_picker.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---

  ✻ AgenticStudio  v0.1.0
     agentic coding in your terminal

  .
  /help · sh╭ theme  filter:  ─────────────────────────────────────╮
            │tokyonight current                                    │
            │catppuccin-mocha                                      │
            │gruvbox-dark                                          │
            │nord                                                  │
            │one-dark                                              │
            │opencode                                              │
            │ansi                                                  │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            ╰──────────────────────────────────────────────────────╯

╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Type a message, / commands, @ files · @path:[0:12] python slice              │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
