packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__status_bar_context.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---

  ✻ AgenticStudio  v0.1.0
     agentic coding in your terminal

  .
  /help · shift+tab modes · @ files · / commands














╭ prompt ──────────────────────────────────────────────────────────────────────────────────────────╮
│ Type a message, / commands, @ files · @path:[0:12] python slice                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ▕████░░░░▏ 47% · ↑12.3k ↓4.1k · $0.0421
